# wing-segmentation

./: .gitignore  CITATION.cff  README.md  environment_python.yml  multiclass_unet_wing_segmentation.ipynb  predict_masks_and_save_wings.ipynb  pyproject.toml  requirements.txt  train_yolov8.ipynb
data/: README.md  heliconius_collection_cambridge.bib  wing_seg_heliconius_collection.csv  wing_seg_monteiro.csv  wing_seg_stri.csv  wing_segmentation_images.csv
deprecated/: multiclass_unet_wing_segmentation.ipynb  segment_all_wings_white.py  train_unet.py  unet_predict_masks.py  utils.py  yolo_predict_masks.py
landmark_scripts/: create_wing_folders.py  flip_images_horizontally.py
preprocessing_scripts/: coco_to_mask.ipynb  coco_to_mask.py  resize_images.py  resize_images_flat_dir.py  resize_images_subfolders.py
segmentation_scripts/: crop_wings_out.py  crop_wings_out_rgb.py  predict_masks_and_save_wings.py  remove_background.py  remove_background_black.py  remove_background_white.py  segment_all_wings_white.py  select_wings.py  train_yolo.py  unet_predict_masks.py  utils.py  yolo_predict_masks.py  yolo_sam_predict_mask.py
src/wing_segmenter/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  image_processor.py  metadata_manager.py  model_manager.py  path_manager.py  resizer.py  run_scanner.py  segmenter.py
